# ocrmypdf-http

./: Dockerfile  Makefile  README.md  api.yaml  app.py  main.py  print_openapi.py  pyproject.toml
.github/workflows/: ci.yaml
