[tool.poetry]
name = "ocrmypdf-http"
version = "0.1.0"
description = ""
authors = ["leonnicolas <leonloechner@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18"
fastapi = "^0.85.0"
ocrmypdf = "^13.4.4"
python-multipart = "^0.0.5"
prometheus-fastapi-instrumentator = "^5.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
